--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>生日快乐</title>
+    <title>马祎蔓生日快乐</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -56,7 +56,7 @@
         </div>
 
         <div class="footer">
-            <p>愿你的每一天都充满快乐与惊喜 🎉</p>
+            <p>愿你找到自己的另一半 🎉</p>
         </div>
     </div>
 
